--- a/Source/snowpack/tests/albedo/WFJ2_res.ini
+++ b/Source/snowpack/tests/albedo/WFJ2_res.ini
@@ -140,7 +140,7 @@ SSI_IS_RTA	=	false
 MULTI_LAYER_SK38	=	false
 ALBEDO_FIXEDVALUE	=	-999.
 NUMBER_FIXED_RATES	=	0
-REDUCE_N_ELEMENTS	=	false
+REDUCE_N_ELEMENTS	=	0
 ALPINE3D	=	false
 
 [FILTERS]
