--- a/Source/snowpack/tests/albedo/output/WFJ2_res.ini
+++ b/Source/snowpack/tests/albedo/output/WFJ2_res.ini
@@ -205,7 +205,7 @@ PREF_FLOW_PARAM_N = 0.0
 PREF_FLOW_PARAM_TH = 0.1
 PREF_FLOW_RAIN_INPUT_DOMAIN = MATRIX
 PREVAILING_WIND_DIR = 0.
-REDUCE_N_ELEMENTS = false
+REDUCE_N_ELEMENTS = 0
 RESEARCH = true
 SALTATION_MODEL = SORENSEN
 SNOW_ALBEDO = PARAMETERIZED
