--- a/Source/snowpack/tests/res1exp/output_ref/MST96_res.ini
+++ b/Source/snowpack/tests/res1exp/output_ref/MST96_res.ini
@@ -164,7 +164,7 @@ NUMBER_SLOPES = 1
 PERP_TO_SLOPE = false
 PLASTIC = false
 PREVAILING_WIND_DIR = 0.
-REDUCE_N_ELEMENTS = false
+REDUCE_N_ELEMENTS = 0
 RESEARCH = true
 SALTATION_MODEL = SORENSEN
 SNOW_ALBEDO = PARAMETERIZED
