--- a/Source/snowpack/doc/examples/cfgfiles/Greenland_35.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/Greenland_35.ini
@@ -86,7 +86,7 @@ MINIMUM_L_ELEMENT = 0.01
 MIN_DEPTH_SUBSURF = 0.07
 NEW_SNOW_GRAIN_SIZE = 0.2
 PREVAILING_WIND_DIR = 0.0
-REDUCE_N_ELEMENTS = true
+REDUCE_N_ELEMENTS = 2
 SNOW_ALBEDO = PARAMETERIZED
 SNOW_EROSION = true
 SNOW_REDISTRIBUTION = false
