Updating the examples with the change that setting the FORCING changed to the Snowpack section and thereby becomes an obligatory setting.

--- a/Source/snowpack/doc/examples/cfgfiles/io_operMST96.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_operMST96.ini
@@ -38,6 +38,7 @@ PROF_DAYS_BETWEEN = 0.125
 [Snowpack]
 MEAS_TSS = true
 ENFORCE_MEASURED_SNOW_HEIGHTS = true
+FORCING = ATMOS
 SW_MODE = REFLECTED
 HEIGHT_OF_WIND_VALUE = 7.5
 HEIGHT_OF_METEO_VALUES = 7.5
