--- a/Source/snowpack/tests/albedo/WFJ2_res.ini
+++ b/Source/snowpack/tests/albedo/WFJ2_res.ini
@@ -57,6 +57,7 @@ ROUGHNESS_LENGTH	=	0.002
 HEIGHT_OF_METEO_VALUES	=	4.5
 HEIGHT_OF_WIND_VALUE	=	4.5
 ENFORCE_MEASURED_SNOW_HEIGHTS	=	FALSE
+FORCING = 	ATMOS
 SW_MODE	=	BOTH
 ATMOSPHERIC_STABILITY	=	MO_MICHLMAYR
 CANOPY	=	FALSE
