--- a/Source/snowpack/doc/examples/cfgfiles/io_antarctic.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_antarctic.ini
@@ -39,6 +39,7 @@ PROF_DAYS_BETWEEN = 0.04166667
 [Snowpack]
 MEAS_TSS = false
 ENFORCE_MEASURED_SNOW_HEIGHTS = false
+FORCING = ATMOS
 SW_MODE = INCOMING
 HEIGHT_OF_WIND_VALUE = 12.
 HEIGHT_OF_METEO_VALUES = 12.
