--- a/Source/snowpack/tests/res1exp/io_res1exp.ini
+++ b/Source/snowpack/tests/res1exp/io_res1exp.ini
@@ -37,6 +37,7 @@ PROF_DAYS_BETWEEN = 0.125
 [Snowpack]
 MEAS_TSS = true
 ENFORCE_MEASURED_SNOW_HEIGHTS = false
+FORCING = ATMOS
 SW_MODE = BOTH
 HEIGHT_OF_WIND_VALUE = 4.5
 HEIGHT_OF_METEO_VALUES = 4.5
