Providing access to the cfg object for the sea ice class, allowing to specify sea ice specific settings via the cfg object (i.e., ini file) and as first item, salinityprofile should now be specified in the new section [SnowpackSeaice]

--- a/Source/snowpack/doc/examples/cfgfiles/io_seaice_S12.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_seaice_S12.ini
@@ -112,6 +112,9 @@ MINIMUM_L_ELEMENT	=	0.0025
 COMBINE_ELEMENTS	=	TRUE
 ADVECTIVE_HEAT		=	FALSE
 
+[SNOWPACKSEAICE]
+SALINITYPROFILE		=	SINUSSALL
+
 [FILTERS]
 PSUM::filter1 = min
 PSUM::arg1::soft = true
