Correcting typo in the sea ice example ini file.

--- a/Source/snowpack/doc/examples/cfgfiles/io_seaice_S12.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_seaice_S12.ini
@@ -113,7 +113,7 @@ COMBINE_ELEMENTS	=	TRUE
 ADVECTIVE_HEAT		=	FALSE
 
 [SNOWPACKSEAICE]
-SALINITYPROFILE		=	SINUSSALL
+SALINITYPROFILE		=	SINUSSAL
 
 [FILTERS]
 PSUM::filter1 = min
