--- a/Source/snowpack/doc/examples/cfgfiles/Greenland_60.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/Greenland_60.ini
@@ -33,7 +33,7 @@ OUT_STAB = false
 OUT_SW = true
 OUT_T = true
 PRECIP_RATES = true
-PROFILE_FORMAT = PRO
+PROF_FORMAT = PRO
 PROF_DAYS_BETWEEN = 28.0
 PROF_START = 0.0
 PROF_WRITE = true
@@ -61,6 +61,8 @@ SW_MODE = BOTH
 THRESH_CHANGE_BC = -1.0
 
 [SnowpackAdvanced]
+ADJUST_HEIGHT_OF_METEO_VALUES = FALSE
+ADJUST_HEIGHT_OF_WIND_VALUE = FALSE
 ALBEDO_PARAMETERIZATION = LEHNING_2
 ALPINE3D = false
 COMBINE_ELEMENTS = true
