Giving an EXPERIMENT tag to separate the output files for the reqpf example, compared to the normal example.

--- a/Source/snowpack/doc/examples/cfgfiles/Greenland_25_reqpf.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/Greenland_25_reqpf.ini
@@ -18,6 +18,7 @@ BACKUP_DAYS_BETWEEN = 100000.0
 CLASSIFY_PROFILE = false
 COORDSYS = CH1903
 CUMSUM_MASS = false
+EXPERIMENT = reqpf
 FIRST_BACKUP = 100000.0
 HARDNESS_IN_NEWTON = false
 METEO = SMET
