Improving efficiency of SNOWPACK by introducing a SNOWPACK_CORE compiler option, which in this commit basically skips snow stability calculations.

--- a/Source/snowpack/CMakeLists.txt
+++ b/Source/snowpack/CMakeLists.txt
@@ -67,6 +67,7 @@ FIND_PACKAGE(MeteoIO)
 
 ###########################################################
 #plugins and applications
+SET(SNOWPACK_CORE OFF CACHE BOOL "Compilation SNOWPACK core functionality only ON or OFF")
 SET(SNOWPACK_STANDALONE ON CACHE BOOL "Compilation SNOWPACK standalone ON or OFF")
 SET(PROFEVAL OFF CACHE BOOL "Compilation PROFEVAL ON or OFF")
 
