Introduces the input processing part for a simple snow drift algorithm based on Winstral exposure factors.

--- a/Source/meteoio/meteoio/spatialInterpolations/CMakeLists.txt
+++ b/Source/meteoio/meteoio/spatialInterpolations/CMakeLists.txt
@@ -24,4 +24,5 @@ SET(spatialInterpolations_sources
 	spatialInterpolations/UserAlgorithm.cc
 	spatialInterpolations/WinstralAlgorithm.cc
 	spatialInterpolations/WinstralListonAlgorithm.cc
+	spatialInterpolations/WinstralListonDriftAlgorithm.cc
 )
