Adding a filter to recalculate RH w.r.t. water to RH w.r.t. ice, in case of sub-freezing temperatures (example: [Filter] RH::filter1 = RHWATERTOICE). Useful for correcting AWS data or models that report RH w.r.t. water regardless of temperature.

--- a/Source/meteoio/meteoio/meteoFilters/CMakeLists.txt
+++ b/Source/meteoio/meteoio/meteoFilters/CMakeLists.txt
@@ -27,6 +27,7 @@ SET(meteoFilters_sources
 	meteoFilters/ProcMult.cc
 	meteoFilters/ProcExpSmoothing.cc
 	meteoFilters/ProcWMASmoothing.cc
+	meteoFilters/ProcRHWaterToIce.cc
 	meteoFilters/FilterNoChange.cc
 	meteoFilters/FilterTimeconsistency.cc
 	meteoFilters/FilterDeGrass.cc
