Making the Stillberg example for Alpine3D work.

--- a/Source/alpine3d/doc/examples/Stillberg/setup/io.ini
+++ b/Source/alpine3d/doc/examples/Stillberg/setup/io.ini
@@ -99,6 +99,7 @@ THRESH_CHANGE_BC	=	-1.3
 SNP_SOIL	=	TRUE
 SOIL_FLUX	=	TRUE
 GEO_HEAT	=	0.06
+FORCING		=	ATMOS
 
 [EBALANCE]
 TERRAIN_RADIATION = TRUE
