By assigning FORCING a default value, ini files are more interchangeable between SNOWPACK versions. BUFF_CHUNK_SIZE was renamed to BUFFER_SIZE a while ago. Updating examples.

--- a/Source/snowpack/doc/examples/cfgfiles/io_antarctic.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_antarctic.ini
@@ -1,5 +1,5 @@
 [General]
-BUFF_CHUNK_SIZE = 370
+BUFFER_SIZE = 370
 BUFF_BEFORE = 1.5
 
 [Input]
@@ -39,7 +39,6 @@ PROF_DAYS_BETWEEN = 0.04166667
 [Snowpack]
 MEAS_TSS = false
 ENFORCE_MEASURED_SNOW_HEIGHTS = false
-FORCING = ATMOS
 SW_MODE = INCOMING
 HEIGHT_OF_WIND_VALUE = 12.
 HEIGHT_OF_METEO_VALUES = 12.
