--- a/Source/snowpack/doc/examples/cfgfiles/io_operMST96.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_operMST96.ini
@@ -1,5 +1,5 @@
 [General]
-BUFF_CHUNK_SIZE = 370
+BUFFER_SIZE = 370
 BUFF_BEFORE = 1.5
 
 [Input]
@@ -38,7 +38,6 @@ PROF_DAYS_BETWEEN = 0.125
 [Snowpack]
 MEAS_TSS = true
 ENFORCE_MEASURED_SNOW_HEIGHTS = true
-FORCING = ATMOS
 SW_MODE = REFLECTED
 HEIGHT_OF_WIND_VALUE = 7.5
 HEIGHT_OF_METEO_VALUES = 7.5
