--- a/Source/snowpack/doc/examples/cfgfiles/io_res5exp.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_res5exp.ini
@@ -1,5 +1,5 @@
 [General]
-BUFF_CHUNK_SIZE = 370
+BUFFER_SIZE = 370
 BUFF_BEFORE = 1.5
 
 [Input]
@@ -35,7 +35,6 @@ PROF_DAYS_BETWEEN = 0.125
 [Snowpack]
 MEAS_TSS = true
 ENFORCE_MEASURED_SNOW_HEIGHTS = true
-FORCING = ATMOS
 SW_MODE = INCOMING
 HEIGHT_OF_WIND_VALUE = 4.5
 HEIGHT_OF_METEO_VALUES = 4.5
