--- a/Source/snowpack/doc/examples/cfgfiles/io_seaice_S12.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_seaice_S12.ini
@@ -1,5 +1,5 @@
 [GENERAL]
-BUFF_CHUNK_SIZE		=	370
+BUFFER_SIZE		=	370
 BUFF_BEFORE		=	1.5
 
 [INPUT]
@@ -66,7 +66,6 @@ CANOPY			=	FALSE
 MEAS_TSS		=	TRUE
 CHANGE_BC		=	FALSE
 SNP_SOIL		=	FALSE
-FORCING			=	ATMOS
 THRESH_CHANGE_BC	=	-1.0
 GEO_HEAT		=	2.00	#Ocean heat flux
 SOIL_FLUX		=	true
