--- a/Source/snowpack/doc/examples/cfgfiles/io_soil.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_soil.ini
@@ -1,5 +1,5 @@
 [GENERAL]
-BUFF_CHUNK_SIZE	=	370
+BUFFER_SIZE	=	370
 BUFF_BEFORE	=	1.5
 
 [INPUT]
@@ -52,7 +52,6 @@ ROUGHNESS_LENGTH	=	0.002
 HEIGHT_OF_METEO_VALUES	=	4.5
 HEIGHT_OF_WIND_VALUE	=	4.5
 ENFORCE_MEASURED_SNOW_HEIGHTS	=	FALSE
-FORCING = ATMOS
 SW_MODE	=	INCOMING
 ATMOSPHERIC_STABILITY = NEUTRAL
 CANOPY	=	FALSE
