--- a/Source/snowpack/tests/albedo/output/WFJ2_res.ini
+++ b/Source/snowpack/tests/albedo/output/WFJ2_res.ini
@@ -62,7 +62,7 @@ VW::FILTER2 = min_max
 
 [GENERAL]
 BUFF_BEFORE = 1.5
-BUFF_CHUNK_SIZE = 370
+BUFFER_SIZE = 370
 
 [GENERATORS]
 PSUM::CST::VALUE = 0
