--- a/Source/snowpack/doc/examples/output/MST96_res.ini
+++ b/Source/snowpack/doc/examples/output/MST96_res.ini
@@ -1,34 +1,54 @@
 [FILTERS]
-HS::ARG1 = soft 0.0
-HS::ARG2 = 5.55e-5
+HS::ARG1::MIN = 0.0
+HS::ARG1::SOFT = true
+HS::ARG2::MAX = 5.55e-5
 HS::FILTER1 = min
 HS::FILTER2 = rate
-ILWR::ARG1 = 188 600
-ILWR::ARG2 = soft 200 400
+ILWR::ARG1::MAX = 600
+ILWR::ARG1::MIN = 188
+ILWR::ARG2::MAX = 400
+ILWR::ARG2::MIN = 200
+ILWR::ARG2::SOFT = true
 ILWR::FILTER1 = min_max
 ILWR::FILTER2 = min_max
-ISWR::ARG1 = -10 1500
-ISWR::ARG2 = soft 0 1500
+ISWR::ARG1::MAX = 1500
+ISWR::ARG1::MIN = -10
+ISWR::ARG2::MAX = 1500
+ISWR::ARG2::MIN = 0
+ISWR::ARG2::SOFT = true
 ISWR::FILTER1 = min_max
 ISWR::FILTER2 = min_max
-PSUM::ARG1 = soft 0.0
+PSUM::ARG1::MIN = 0.0
+PSUM::ARG1::SOFT = true
 PSUM::FILTER1 = min
-RH::ARG1 = 0.01 1.2
-RH::ARG2 = soft 0.05 1.0
+RH::ARG1::MAX = 1.2
+RH::ARG1::MIN = 0.01
+RH::ARG2::MAX = 1.0
+RH::ARG2::MIN = 0.05
+RH::ARG2::SOFT = true
 RH::FILTER1 = min_max
 RH::FILTER2 = min_max
-RSWR::ARG1 = -10 1500
-RSWR::ARG2 = soft 0 1500
+RSWR::ARG1::MAX = 1500
+RSWR::ARG1::MIN = -10
+RSWR::ARG2::MAX = 1500
+RSWR::ARG2::MIN = 0
+RSWR::ARG2::SOFT = true
 RSWR::FILTER1 = min_max
 RSWR::FILTER2 = min_max
-TA::ARG1 = 240 320
+TA::ARG1::MAX = 320
+TA::ARG1::MIN = 240
 TA::FILTER1 = min_max
-TSG::ARG1 = 200 320
+TSG::ARG1::MAX = 320
+TSG::ARG1::MIN = 200
 TSG::FILTER1 = min_max
-TSS::ARG1 = 200 320
+TSS::ARG1::MAX = 320
+TSS::ARG1::MIN = 200
 TSS::FILTER1 = min_max
-VW::ARG1 = -2 70
-VW::ARG2 = soft 0.0 50.0
+VW::ARG1::MAX = 70
+VW::ARG1::MIN = -2
+VW::ARG2::MAX = 50.0
+VW::ARG2::MIN = 0.0
+VW::ARG2::SOFT = true
 VW::FILTER1 = min_max
 VW::FILTER2 = min_max
 
@@ -37,12 +57,14 @@ BUFF_BEFORE = 1.5
 BUFFER_SIZE = 370
 
 [INPUT]
-COORDPARAM = NULL
 COORDSYS = CH1903
 ISWR_IS_NET = false
 METEO = SMET
-METEOPATH = ../input
+METEOPATH = ./input
 NUMBER_OF_SOLUTES = 0
+PSUM_PH::CREATE = PRECSPLITTING
+PSUM_PH::PRECSPLITTING::SNOW = 274.35
+PSUM_PH::PRECSPLITTING::TYPE = THRESH
 SNOW = SMET
 SNOWFILE1 = MST96
 SOLUTE_NAMES = NITRATE
@@ -50,24 +72,22 @@ STATION1 = MST96
 TIME_ZONE = 1
 
 [INTERPOLATIONS1D]
-DW::NEAREST = extrapolate
+DW::NEAREST::EXTRAPOLATE = true
 DW::RESAMPLE = nearest
-HS::LINEAR = 43200
+HS::LINEAR::WINDOW_SIZE = 43200
 HS::RESAMPLE = linear
-PSUM::ACCUMULATE = 900
+PSUM::ACCUMULATE::PERIOD = 900
 PSUM::RESAMPLE = accumulate
-VW::NEAREST = extrapolate
+VW::NEAREST::EXTRAPOLATE = true
 VW::RESAMPLE = nearest
 WINDOW_SIZE = 86400
 
 [OUTPUT]
 AGGREGATE_PRF = false
 AGGREGATE_PRO = false
-AGGREG_PRF = false
 AVGSUM_TIME_SERIES = true
 BACKUP_DAYS_BETWEEN = 365.
 CLASSIFY_PROFILE = false
-COORDPARAM = NULL
 COORDSYS = CH1903
 CUMSUM_MASS = false
 EXPERIMENT = res
@@ -77,6 +97,7 @@ HAZARD_STEPS_BETWEEN = 2
 METEO = SMET
 METEOPATH = ./output
 OUT_CANOPY = false
+OUT_DHS = false
 OUT_HAZ = true
 OUT_HEAT = true
 OUT_LOAD = false
@@ -93,9 +114,10 @@ PROF_FORMAT = PRO
 PROF_START = 0.0
 PROF_WRITE = true
 SNOW = SMET
+SNOW_WRITE = true
 TIME_ZONE = 1
 TS_DAYS_BETWEEN = 0.125
-TS_FORMAT = MET
+TS_FORMAT = SMET
 TS_START = 0.0
 TS_WRITE = true
 WRITE_PROCESSED_METEO = false
@@ -106,6 +128,7 @@ CALCULATION_STEP_LENGTH = 15.0
 CANOPY = false
 CHANGE_BC = false
 ENFORCE_MEASURED_SNOW_HEIGHTS = false
+FORCING = ATMOS
 GEO_HEAT = 0.06
 HEIGHT_OF_METEO_VALUES = 4.5
 HEIGHT_OF_WIND_VALUE = 4.5
@@ -119,19 +142,23 @@ THRESH_CHANGE_BC = -1.0
 [SNOWPACKADVANCED]
 ADJUST_HEIGHT_OF_METEO_VALUES = true
 ADJUST_HEIGHT_OF_WIND_VALUE = true
-ADVECTIVE_HEAT = 0.0
+ADVECTIVE_HEAT = false
 ALBEDO_AGING = true
 ALBEDO_AVERAGE_SCHMUCKI = ALL_DATA
 ALBEDO_FIXEDVALUE = -999.
 ALBEDO_PARAMETERIZATION = LEHNING_2
 ALLOW_ADAPTIVE_TIMESTEPPING = true
 ALPINE3D = false
-AVG_METHOD_HYDRAULIC_CONDUCTIVITY = ARITHMETICMEAN
+ALPINE3D_PTS = false
+AVG_METHOD_HYDRAULIC_CONDUCTIVITY = GEOMETRICMEAN
+AVG_METHOD_HYDRAULIC_CONDUCTIVITY_PREF_FLOW = GEOMETRICMEAN
 CANOPY_HEAT_MASS = true
 CANOPY_TRANSMISSION = true
 COMBINE_ELEMENTS = true
 DETECT_GRASS = false
+ENABLE_VAPOUR_TRANSPORT = false
 FIXED_POSITIONS = 0.25 0.5 1.0 -0.25 -0.10
+FORCE_ADD_SNOWFALL = false
 FORCE_RH_WATER = true
 FORCE_SW_MODE = false
 FORESTFLOOR_ALB = true
@@ -153,23 +180,36 @@ JAM = false
 LB_COND_WATERFLUX = FREEDRAINAGE
 MASS_BALANCE = false
 MAX_NUMBER_MEAS_TEMPERATURES = 5
+MAX_SIMULATED_HS = -1
 MEAS_INCOMING_LONGWAVE = false
 METAMORPHISM_MODEL = DEFAULT
 MINIMUM_L_ELEMENT = 0.0025
 MIN_DEPTH_SUBSURF = 0.07
 MULTI_LAYER_SK38 = false
+NEWSNOW_LWC = false
 NEW_SNOW_GRAIN_SIZE = 0.3
 NUMBER_FIXED_RATES = 0
 NUMBER_SLOPES = 1
 PERP_TO_SLOPE = false
 PLASTIC = false
+PREF_FLOW = false
+PREF_FLOW_PARAM_HETEROGENEITY_FACTOR = 1.0
+PREF_FLOW_PARAM_N = 0.0
+PREF_FLOW_PARAM_TH = 0.1
+PREF_FLOW_RAIN_INPUT_DOMAIN = MATRIX
 PREVAILING_WIND_DIR = 0.
+READ_DSM = false
 REDUCE_N_ELEMENTS = 0
 RESEARCH = true
+RIME_INDEX = false
 SALTATION_MODEL = SORENSEN
 SNOW_ALBEDO = PARAMETERIZED
 SNOW_EROSION = true
+SNOW_PREPARATION = false
 SNOW_REDISTRIBUTION = false
+SOIL_EVAP_MODEL = RELATIVE_HUMIDITY
+SOIL_FLUX = false
+SOOT_PPMV = 0.0
 SSI_IS_RTA = false
 STRENGTH_MODEL = DEFAULT
 SW_ABSORPTION_SCHEME = MULTI_BAND
@@ -183,7 +223,7 @@ T_CRAZY_MAX = 340.
 T_CRAZY_MIN = 210.
 VARIANT = DEFAULT
 VISCOSITY_MODEL = DEFAULT
-WATERTRANSPORTMODEL_SNOW = BUCKET
-WATERTRANSPORTMODEL_SOIL = BUCKET
+WATERTRANSPORTMODEL_SNOW = RICHARDSEQUATION
+WATERTRANSPORTMODEL_SOIL = RICHARDSEQUATION
 WATER_LAYER = false
 WIND_SCALING_FACTOR = 1.0
