--- a/Source/meteoio/meteoio/meteoFilters/CMakeLists.txt
+++ b/Source/meteoio/meteoio/meteoFilters/CMakeLists.txt
@@ -30,6 +30,7 @@ SET(meteoFilters_sources
 	meteoFilters/ProcExpSmoothing.cc
 	meteoFilters/ProcWMASmoothing.cc
 	meteoFilters/ProcRHWaterToIce.cc
+	meteoFilters/ProcTransformWindVector.cc
 	meteoFilters/FilterNoChange.cc
 	meteoFilters/FilterTimeconsistency.cc
 	meteoFilters/FilterDeGrass.cc
