Add wind direction to smet output variables

--- a/create_forcing/io_files/io.ini
+++ b/create_forcing/io_files/io.ini
@@ -41,7 +41,7 @@ NETCDF_VAR::LATITUDE	=	lat
 
 Downscaling = true
 
-Virtual_parameters       = TA QI VW ISWR ILWR PSUM  # Add other variables later
+Virtual_parameters       = TA QI VW DW ISWR ILWR PSUM  # Add other variables later
 VSTATIONS_REFRESH_RATE   = 3600         # 1hrs
 VSTATIONS_REFRESH_OFFSET = 3600         # 1hrs
 
