Update workflow to provide minimum working example

--- a/Scripts/create_smet_from_netcdf/io_files/MERRA-2.ini
+++ b/Scripts/create_smet_from_netcdf/io_files/MERRA-2.ini
@@ -1,8 +1,5 @@
 IMPORT_AFTER    =       ../station_list.lst
-
-[GENERAL]
-BUFF_BEFORE     =       0
-BUFFER_SIZE     =       0
+IMPORT_BEFORE   =       ./base.ini
 
 [INPUT]
 COORDSYS        =       PROJ4
@@ -11,15 +8,15 @@ TIME_ZONE       =       0
 NETCDF_SCHEMA   =       CF-1.6
 DEM             =       NETCDF
 DEMVAR          =       PHIS	# Check ncdump to find out the variable for the topography
-DEMFILE         =       ../../MERRA2/misc/Elevation_MERRA2.nc
-SOURCE_DEM      =       ../../MERRA2/misc/Elevation_MERRA2.nc
+DEMFILE         =       ../../../../MERRA2/Elevation_MERRA2.nc
+SOURCE_DEM      =       ../../../../MERRA2/Elevation_MERRA2.nc
 GRID2D          =       NETCDF
 NC_EXT          =       .nc
 NC_DEBUG	=	FALSE
 
 METEO           =       NETCDF
-METEOPATH       =       ../../MERRA2//
-GRID2DPATH	=	../../MERRA2//
+METEOPATH       =       ../../../../MERRA2/
+GRID2DPATH	=	../../../../MERRA2/
 
 NETCDF_VAR::DEM         =       PHIS
 NETCDF_VAR::TA          =       T2M
@@ -42,8 +39,8 @@ NETCDF_VAR::LATITUDE	=	lat
 Downscaling = true
 
 Virtual_parameters       = TA QI VW ISWR ILWR PSUM  # Add other variables later
-VSTATIONS_REFRESH_RATE   = 3600         # 1hrs
-VSTATIONS_REFRESH_OFFSET = 3600         # 1hrs
+VSTATIONS_REFRESH_RATE=3600
+VSTATIONS_REFRESH_OFFSET=3600
 
 RESAMPLING_STRATEGY =       GRID_EXTRACT
 ISWR_IS_NET         =       FALSE
@@ -53,15 +50,9 @@ SNOW                =       SMET
 VW::create = Windcomponents
 
 [OUTPUT]
-COORDSYS                = PROJ4
-COORDPARAM              = 3031
-TIME_ZONE               = 0
-METEO                   = SMET
-METEOPATH               = ../output/
-SMET_APPEND             = TRUE
-SMET_PLOT_HEADERS       = FALSE
+METEOPATH=../output/
 
 [FILTERS]
 PSUM::filter1    = mult
 PSUM::arg1::type = CST
-PSUM::arg1::cst  = 3600
+PSUM::arg1::cst=3600
