--- a/Scripts/create_smet_from_netcdf/io_files/MERRA-2.ini
+++ b/Scripts/create_smet_from_netcdf/io_files/MERRA-2.ini
@@ -1,34 +1,34 @@
-IMPORT_AFTER    =       ../station_list.lst
-IMPORT_BEFORE   =       ./base.ini
+IMPORT_AFTER		=	../station_list.lst
+IMPORT_BEFORE		=	./base.ini
 
 [INPUT]
-COORDSYS        =       PROJ4
-COORDPARAM      =       3031
-TIME_ZONE       =       0
-NETCDF_SCHEMA   =       CF-1.6
-DEM             =       NETCDF
-DEMVAR          =       PHIS	# Check ncdump to find out the variable for the topography
-DEMFILE         =       ../../../../MERRA2/Elevation_MERRA2.nc
-SOURCE_DEM      =       ../../../../MERRA2/Elevation_MERRA2.nc
-GRID2D          =       NETCDF
-NC_EXT          =       .nc
-NC_DEBUG	=	FALSE
+COORDSYS		=	PROJ4
+COORDPARAM		=	3031
+TIME_ZONE		=	0
+NETCDF_SCHEMA		=	CF-1.6
+DEM			=	NETCDF
+DEMVAR			=	PHIS	# Check ncdump to find out the variable for the topography
+DEMFILE			=	../../../../MERRA2/Elevation_MERRA2.nc
+SOURCE_DEM		=	../../../../MERRA2/Elevation_MERRA2.nc
+GRID2D			=	NETCDF
+NC_EXT			=	.nc
+NC_DEBUG		=	FALSE
 
-METEO           =       NETCDF
-METEOPATH       =       ../../../../MERRA2/
-GRID2DPATH	=	../../../../MERRA2/
+METEO			=	NETCDF
+METEOPATH		=	../../../../MERRA2/
+GRID2DPATH		=	../../../../MERRA2/
 
-NETCDF_VAR::DEM         =       PHIS
-NETCDF_VAR::TA          =       T2M
-NETCDF_VAR::QI          =       QV2M
-NETCDF_VAR::U           =       U10M
-NETCDF_VAR::V           =       V10M
-NETCDF_VAR::ISWR        =       SWGDN
-NETCDF_VAR::LWR_NET     =       LWGNT
-NETCDF_VAR::OLWR        =       LWGEM
-NETCDF_VAR::PSUM_S      =       PRECSN
-NETCDF_VAR::PSUM_L      =       PRECLS
-NETCDF_VAR::PSUM_LC     =       PRECCU
+NETCDF_VAR::DEM		=	PHIS
+NETCDF_VAR::TA		=	T2M
+NETCDF_VAR::QI		=	QV2M
+NETCDF_VAR::U		=	U10M
+NETCDF_VAR::V		=	V10M
+NETCDF_VAR::ISWR	=	SWGDN
+NETCDF_VAR::LWR_NET	=	LWGNT
+NETCDF_VAR::OLWR	=	LWGEM
+NETCDF_VAR::PSUM_S	=	PRECSN
+NETCDF_VAR::PSUM_L	=	PRECLS
+NETCDF_VAR::PSUM_LC	=	PRECCU
 NETCDF_VAR::TSS		=	TS
 
 NETCDF_DIM::LONGITUDE	=	lon
@@ -36,23 +36,21 @@ NETCDF_DIM::LATITUDE	=	lat
 NETCDF_VAR::LONGITUDE	=	lon
 NETCDF_VAR::LATITUDE	=	lat
 
-Downscaling = true
+Virtual_parameters	=	TA QI VW ISWR ILWR PSUM
+VSTATIONS_REFRESH_RATE	=	3600
+VSTATIONS_REFRESH_OFFSET=	3600
 
-Virtual_parameters       = TA QI VW ISWR ILWR PSUM  # Add other variables later
-VSTATIONS_REFRESH_RATE=3600
-VSTATIONS_REFRESH_OFFSET=3600
+RESAMPLING_STRATEGY	=	GRID_EXTRACT
+ISWR_IS_NET		=	FALSE
+SNOWPATH		=	../input/
+SNOW			=	SMET
 
-RESAMPLING_STRATEGY =       GRID_EXTRACT
-ISWR_IS_NET         =       FALSE
-SNOWPATH            =       ../input/
-SNOW                =       SMET
-
-VW::create = Windcomponents
+VW::create		=	Windcomponents
 
 [OUTPUT]
-METEOPATH=../output/
+METEOPATH		=	../output/
 
 [FILTERS]
-PSUM::filter1    = mult
-PSUM::arg1::type = CST
-PSUM::arg1::cst=3600
+PSUM::filter1		=	mult
+PSUM::arg1::type	=	CST
+PSUM::arg1::cst		=	3600
