With recent MeteoIO updates, virtual stations now need to be specified in the [INPUTEDITING] section.

--- a/Scripts/create_smet_from_netcdf/io_files/CESM.ini
+++ b/Scripts/create_smet_from_netcdf/io_files/CESM.ini
@@ -38,14 +38,15 @@ NETCDF_DIM::LATITUDE	=	lat
 NETCDF_VAR::LONGITUDE	=	lon
 NETCDF_VAR::LATITUDE	=	lat
 
-Virtual_parameters	=	RH TA ISWR VW ILWR PSUM  # Add other variables later
-VSTATIONS_REFRESH_RATE	=	10800
-VSTATIONS_REFRESH_OFFSET=	10800
-
-RESAMPLING_STRATEGY	=	GRID_EXTRACT
 ISWR_IS_NET		=	FALSE
 SNOWPATH		=	../input/
 SNOW			=	SMET
+
+[INPUTEDITING]
+RESAMPLING_STRATEGY	=	GRID_EXTRACT
+Virtual_parameters	=	RH TA ISWR VW ILWR PSUM  # Add other variables later
+VSTATIONS_REFRESH_RATE	=	10800
+VSTATIONS_REFRESH_OFFSET=	10800
 
 [OUTPUT]
 METEOPATH		=	../output/
