--- a/Scripts/create_smet_from_netcdf/io_files/RACMO2.ini
+++ b/Scripts/create_smet_from_netcdf/io_files/RACMO2.ini
@@ -33,16 +33,17 @@ NETCDF_DIM::NORTHING	=	northing
 NETCDF_VAR::EASTING	=	easting
 NETCDF_VAR::NORTHING	=	northing
 
-Virtual_parameters	=	TA QI VW ISWR RSWR ILWR PSUM
-VSTATIONS_REFRESH_RATE	=	10800
-VSTATIONS_REFRESH_OFFSET=	10800
-
-RESAMPLING_STRATEGY	=	GRID_EXTRACT
 ISWR_IS_NET		=	FALSE
 SNOWPATH		=	../input/
 SNOW			=	SMET
 
 VW::create		=	Windcomponents
+
+[INPUTEDITING]
+RESAMPLING_STRATEGY	=	GRID_EXTRACT
+Virtual_parameters	=	TA QI VW DW ISWR RSWR ILWR PSUM
+VSTATIONS_REFRESH_RATE	=	10800
+VSTATIONS_REFRESH_OFFSET=	10800
 
 [OUTPUT]
 METEOPATH		=	../output/
