--- a/Scripts/create_smet_from_netcdf/io_files/MERRA-2.ini
+++ b/Scripts/create_smet_from_netcdf/io_files/MERRA-2.ini
@@ -36,16 +36,17 @@ NETCDF_DIM::LATITUDE	=	lat
 NETCDF_VAR::LONGITUDE	=	lon
 NETCDF_VAR::LATITUDE	=	lat
 
-Virtual_parameters	=	TA QI VW ISWR ILWR PSUM
-VSTATIONS_REFRESH_RATE	=	3600
-VSTATIONS_REFRESH_OFFSET=	3600
-
-RESAMPLING_STRATEGY	=	GRID_EXTRACT
 ISWR_IS_NET		=	FALSE
 SNOWPATH		=	../input/
 SNOW			=	SMET
 
 VW::create		=	Windcomponents
+
+[INPUTEDITING]
+RESAMPLING_STRATEGY	=	GRID_EXTRACT
+Virtual_parameters	=	TA QI VW DW ISWR ILWR PSUM
+VSTATIONS_REFRESH_RATE	=	3600
+VSTATIONS_REFRESH_OFFSET=	3600
 
 [OUTPUT]
 METEOPATH		=	../output/
