Finalizing a merge from master and committing some changes to document the source code used for the Journal of Glaciology publication.

--- a/Source/meteoio/doc/examples/io.ini
+++ b/Source/meteoio/doc/examples/io.ini
@@ -1,193 +1,32 @@
-[General]
-BUFFER_SIZE = 370
-BUFF_BEFORE	= 1.5
-;BUFF_GRIDS	= 0
+IMPORT_BEFORE		=	./io_base.ini
 
-[Input]
-COORDSYS	= CH1903
-TIME_ZONE	= 1
-; COORDSYS	= PROJ4
-; COORDPARAM	= 21781
+[INPUT]
+STATION1		=	WHOI05.smet #PS81-506
+#SNOWPATH		=	../../../a3d_setup/a3d_setup_506/snowfiles/
+SNOWPATH		=	../../../a3d_setup/a3d_setup_506/snowfiles_nosnow/
+DEMFILE			=	./input/surface-grids/506_dem.asc
+LANDUSEFILE		=	./input/surface-grids/506_lus.asc
+POIFILE			=	./input/surface-grids/506_poi.lst
 
-GRID2D		= ARC
-GRID2DPATH	= ./input/surface-grids
+[OUTPUT]
+EXPERIMENT		=	506
 
-#reading ARC dem
-DEM		= ARC
-DEMFILE  	= ./input/surface-grids/Switzerland_1000m.asc
+METEOPATH		=	./output_1/meteo/
+SNOWPATH		=	./output_1/snowfiles/
+GRID2DPATH		=	./output_1/grids/
 
-#reading ARPS dem
-; DEM		= ARPS
-; DEMFILE 	= ./wgrt10r2_vw4.asc
-; ARPS_X 	= 653400
-; ARPS_Y 	= 112204
 
-#reading PGM image as dem
-; DEM		= PGM
-; DEMFILE	= ./Switzerland.pgm
-; PGM_XCOORD	= 479500.
-; PGM_YCOORD	= 73500.
-; PGM_CELLSIZE	= 1000.
-; PGM_MIN	= 193.
-; PGM_MAX	= 4204.
+[SNOWPACKADVANCED]
+SNOW_EROSION		=	REDEPOSIT
+WATERTRANSPORTMODEL_SOIL =      BUCKET
+WATERTRANSPORTMODEL_SNOW =      BUCKET
 
-; LANDUSE	= ARC
-; LANDUSEFILE	= ch_as97.asc
 
-#SMET meteorological file format
-METEO		= SMET
-METEOPATH	= ./input/meteo
-STATION1	= FLU2
-STATION2	= FIR2
-STATION3	= FRA2
-STATION4	= GLA2
-STATION5	= ILI2
-STATION6	= OTT2
-; STATION7	= TUJ3.smet
+[INTERPOLATIONS1D]
+PSUM::resample		=	accumulate      ;cf interractions with CALCULATION_STEP_LENGTH
+#PSUM::accumulate::period =	1800		# Hack to get half the precipitation!!!
+PSUM::accumulate::period =	3600		# Hack to get half the precipitation!!!
 
-#IMIS network database input -> IMIS plugin
-; METEO		= IMIS
-; DBNAME		= xxx
-; DBUSER		= xxx
-; DBPASS		= xxx
-; STATION1	= *WFJ
-; STATION2	= DAV3
-; STATION3	= KLO2
-; STATION4	= *SAM0
-
-#GEOtop traditional inputs -> GEOTOP plugin
-; METEO		 = GEOTOP
-; METEOPATH       = meteo/
-; METEOPREFIX     = _meteo
-
-[Output]
-COORDSYS	= CH1903
-TIME_ZONE 	= 1
-
-GRID2D		= ARC
-GRID2DPATH	= ./
-
-METEO		= SMET
-METEOPATH	= ./
-
-[Filters]
-TA::filter1	= min_max
-TA::arg1::min	= 240
-TA::arg1::max	= 320
-
-RH::filter1	= min_max
-RH::arg1::min 	= 0.01
-RH::arg1::max	= 1.2
-RH::filter2	= min_max
-RH::arg2::soft	= true
-RH::arg2::min	= 0.05
-RH::arg2::max	= 1.0
-
-PSUM::filter1	= min
-PSUM::arg1::min	= -0.1
-PSUM::filter2	= min
-PSUM::arg2::soft	= true
-PSUM::arg2::min	= 0.
-PSUM::filter3	= Undercatch_WMO
-PSUM::arg3::type	= Hellmann
-
-ISWR::filter1	= min_max
-ISWR::arg1::min	= -10.
-ISWR::arg1::max	= 1500.
-ISWR::filter2	= min
-ISWR::arg2::soft	= true
-ISWR::arg2::min	= 0.
-
-RSWR::filter1	= min_max
-RSWR::arg1::min 	= -10
-RSWR::arg1::max	= 1500
-RSWR::filter2	= min
-RSWR::arg2::soft	= true
-RSWR::arg2::min	= 0
-
-#for TA between 240 and 320 K
-ILWR::filter1	= min_max
-ILWR::arg1::min	= 188
-ILWR::arg1::max	= 600
-ILWR::filter2	= min_max
-ILWR::arg2::soft	= true
-ILWR::arg2::min	= 200
-ILWR::arg2::max	= 400
-
-#we need to consider time with no snow -> TSS>0
-#min(TSS) in db since 1998: -50C
-TSS::filter1	= min_max
-TSS::arg1::min	= 200
-TSS::arg1::max	= 320
-
-#idem
-TSG::filter1	= min_max
-TSG::arg1::min	= 200
-TSG::arg1::max= 320
-
-HS::filter1	= min
-HS::arg1::soft	= true
-HS::arg1::min	= 0.0
-HS::filter2	= rate
-HS::arg2::max	= 5.55e-5 ;0.20 m/h
-
-VW::filter1	= min_max
-VW::arg1::min	= -2
-VW::arg1::max	= 70
-VW::filter2	= min_max
-VW::arg2::soft	= true
-VW::arg2::min	= 0.2
-VW::arg2::max	= 50.0
-
-[Interpolations1D]
-WINDOW_SIZE	= 86400
-
-TA::resample	= linear
-
-RH::resample	= linear
-
-HS::resample	= linear
-
-VW::resample	= nearest
-VW::nearest::extrapolate = true
-
-PSUM::resample	= accumulate
-PSUM::accumulate::period = 3600
 
 [Interpolations2D]
-TA::algorithms	= IDW_LAPSE AVG_LAPSE
-TA::avg_lapse::rate	= -0.008
-TA::idw_lapse::rate	= -0.008
-TA::idw_lapse::soft	= true
-
-RH::algorithms	= LISTON_RH IDW_LAPSE AVG
-
-PSUM::algorithms	= IDW_LAPSE AVG_LAPSE CST
-PSUM::avg_lapse::frac	= true
-PSUM::avg_lapse::rate	= 0.0005
-PSUM::cst::value		= 0.
-
-VW::algorithms	= IDW_LAPSE AVG
-
-P::algorithms	= STD_PRESS
-
-ILWR::algorithms = AVG_LAPSE
-ILWR::avg_lapse::rate = -0.03125
-
-RSWR::algorithms = IDW AVG
-
-ISWR::algorithms = SWRAD
-
-[Generators]
-ILWR::generators = AllSky_LW CLearSky_LW
-ILWR::Allsky_LW::type	= Unsworth
-ILWR::Clearsky_LW::type	= Dilley
-
-RH::generators = CST
-RH::Cst::value        = 0.7
-
-TA::generators = Sin
-TA::Sin::type = yearly
-TA::Sin::min = 268.26
-TA::Sin::max = 285.56
-TA::Sin::phase = 0.0833
+PSUM::winstral++::dmax  = 10
