--- a/Scripts/create_smet_from_netcdf/io_files/RACMO2.ini
+++ b/Scripts/create_smet_from_netcdf/io_files/RACMO2.ini
@@ -2,7 +2,7 @@ IMPORT_AFTER		=	../station_list.lst
 IMPORT_BEFORE		=	./base.ini
 
 [INPUT]
-COORDSYS		=	PROJ4
+COORDSYS		=	PROJ
 COORDPARAM		=	3413
 TIME_ZONE		=	0
 NETCDF_SCHEMA		=	CF-1.6
