--- a/Scripts/create_smet_from_netcdf/io_files/base.ini
+++ b/Scripts/create_smet_from_netcdf/io_files/base.ini
@@ -3,7 +3,7 @@ BUFF_BEFORE     =       0
 BUFFER_SIZE     =       0
 
 [OUTPUT]
-COORDSYS                = PROJ4
+COORDSYS                = PROJ
 COORDPARAM              = 3031
 TIME_ZONE               = 0
 METEO                   = SMET
