Moving the explicit snow drift to its own class in SnowDrift2D.cc, to keep the code clean.

--- a/Source/alpine3d/alpine3d/CMakeLists.txt
+++ b/Source/alpine3d/alpine3d/CMakeLists.txt
@@ -21,6 +21,7 @@ SET(a3d_sources
 	${snowdrift_sources}
 	SnowpackInterfaceWorker.cc
 	SnowpackInterface.cc
+	SnowDrift2D.cc
 	Glaciers.cc
 	TechSnowA3D.cc
 	DataAssimilation.cc
