Updating the examples to reflect the current workings of the SNOW_EROSION key.

--- a/Source/snowpack/doc/examples/cfgfiles/Greenland_25.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/Greenland_25.ini
@@ -90,7 +90,7 @@ NEW_SNOW_GRAIN_SIZE = 0.2
 PREVAILING_WIND_DIR = 0.0
 REDUCE_N_ELEMENTS = 2
 SNOW_ALBEDO = PARAMETERIZED
-SNOW_EROSION = true
+SNOW_EROSION = NONE
 SNOW_REDISTRIBUTION = false
 SOOT_PPMV = 0.0
 SW_ABSORPTION_SCHEME = MULTI_BAND
