--- a/Source/snowpack/doc/examples/cfgfiles/io_operMST96.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_operMST96.ini
@@ -55,7 +55,7 @@ CANOPY = false
 
 [SnowpackAdvanced]
 NUMBER_SLOPES = 5
-SNOW_EROSION = true
+SNOW_EROSION = HS_DRIVEN
 SNOW_REDISTRIBUTION = true
 HN_DENSITY_MODEL = ZWART
 FIXED_POSITIONS = 0.25 0.5 1.0 -0.25 -0.10
