--- a/Source/snowpack/doc/examples/cfgfiles/io_res1exp.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_res1exp.ini
@@ -58,7 +58,7 @@ CANOPY = false
 
 [SnowpackAdvanced]
 FIXED_POSITIONS = 0.25 0.5 1.0 -0.25 -0.10
-SNOW_EROSION = true
+SNOW_EROSION = HS_DRIVEN
 
 [Filters]
 PSUM::filter1 = min
