--- a/Source/snowpack/doc/examples/cfgfiles/io_res5exp.ini
+++ b/Source/snowpack/doc/examples/cfgfiles/io_res5exp.ini
@@ -52,7 +52,7 @@ CANOPY = false
 [SnowpackAdvanced]
 FIXED_POSITIONS = 0.25 0.5 1.0 -0.25 -0.10
 NUMBER_SLOPES = 5
-SNOW_EROSION = true
+SNOW_EROSION = HS_DRIVEN
 SNOW_REDISTRIBUTION = true
 
 [Filters]
