--- a/Scripts/create_smet_from_netcdf/io_files/base.ini
+++ b/Scripts/create_smet_from_netcdf/io_files/base.ini
@@ -1,6 +1,7 @@
 [GENERAL]
-BUFF_BEFORE     =       0
-BUFFER_SIZE     =       0
+BUFF_BEFORE             = 0
+BUFF_GRIDS              = 1	# Buffer at most 1 grid
+BUFFER_SIZE             = 0
 
 [OUTPUT]
 COORDSYS                = PROJ
