More sensible EXPERIMENT in base.ini

--- a/Scripts/Spinup/base.ini
+++ b/Scripts/Spinup/base.ini
@@ -61,7 +61,7 @@ OUT_STAB		=	TRUE
 OUT_DHS			=	TRUE
 METEO			=	SMET
 
-EXPERIMENT		=	TESTR2
+EXPERIMENT		=	NO_EXP
 
 [SNOWPACK]
 CALCULATION_STEP_LENGTH	=	30	;cf interactions with HNW::accumulate
