Adding an option to ignore the slope information in the *.smet file when constructing the *.sno file

--- a/Scripts/Spinup/spinup.rc
+++ b/Scripts/Spinup/spinup.rc
@@ -38,6 +38,10 @@ final_end=""
 snow_init_dir="./snow_init/"
 
 
+# Specify if the slope information in the *.smet file should be ignored when creating the *sno file
+ignore_slope=1	# 1 is YES, 0 is NO
+
+
 # Specify location of the timeshift_sno_files.sh script. Point to timeshift_sno_files_oldawk.sh when error message appear about the date being out of range.
 time_shift_script="../../Source/snowpack/tools/timeshift_sno_files.sh"
 
