minor script changes

--- a/Scripts/create_smet_from_netcdf/io_files/COSMO-2.ini
+++ b/Scripts/create_smet_from_netcdf/io_files/COSMO-2.ini
@@ -1,4 +1,4 @@
-IMPORT_AFTER		=	../station_list.lst
+IMPORT_AFTER		=	../IMIS_list.lst
 IMPORT_BEFORE		=	./base.ini
 
 [INPUT]
@@ -7,15 +7,15 @@ TIME_ZONE		=	1
 NETCDF_SCHEMA		=	CF-1.6
 DEM				=	NETCDF
 DEMVAR			=	HSURF	# Check ncdump to find out the variable for the topography
-DEMFILE			=	/scratch/snx3000/bkruyt/COSMO2/CH_HSURF.nc
-SOURCE_DEM		=	/scratch/snx3000/bkruyt/COSMO2/CH_HSURF.nc
+DEMFILE			=	/Users/bert/DATA/COSMO_ETHZ/CH_HSURF.nc
+SOURCE_DEM		=	/Users/bert/DATA/COSMO_ETHZ/CH_HSURF.nc
 GRID2D			=	NETCDF
 NC_EXT			=	.nc
 NC_DEBUG		=	FALSE
 
 METEO			=	NETCDF
-METEOPATH		=	/scratch/snx3000/bkruyt/COSMO2/CH_present/combined
-GRID2DPATH		=	/scratch/snx3000/bkruyt/COSMO2/CH_present/combined
+METEOPATH		=	/Users/bert/DATA/COSMO_ETHZ/CH_present/combined
+GRID2DPATH		=	/Users/bert/DATA/COSMO_ETHZ/CH_present/combined
 
 NETCDF_VAR::DEM		=	HSURF
 NETCDF_VAR::P		=	PS
@@ -39,13 +39,20 @@ SNOW			=	SMET
 
 VW::create		=	Windcomponents
 
+
 [INPUTEDITING]
 RESAMPLING_STRATEGY	=	GRID_EXTRACT
-Virtual_parameters	=	TA QI VW DW ISWR LWR_NET PSUM
+Virtual_parameters	=	TA QI VW DW ISWR LWR_NET PSUM TSG P
 VSTATIONS_REFRESH_RATE	=	3600
 VSTATIONS_REFRESH_OFFSET=	3600
 
 [OUTPUT]
-METEOPATH		=	../output/
+# METEOPATH		=	../output/
+METEOPATH		=	/Users/bert/snowpack/Projects/COSMO_past/COSMO-2_1996/smet  ;directly to project dir
 
-
+# [GENERATORS]
+# RH::CREATE = HUMIDITY
+# RH::HUMIDITY::TYPE = RH
+# [GENERATORS]
+# RH::generator1			=	HUMIDITY
+# RH::arg1::type			=	RH
