--- a/Scripts/create_smet_from_netcdf/io_files/COSMO-2.ini
+++ b/Scripts/create_smet_from_netcdf/io_files/COSMO-2.ini
@@ -47,8 +47,8 @@ VSTATIONS_REFRESH_RATE	=	3600
 VSTATIONS_REFRESH_OFFSET=	3600
 
 [OUTPUT]
-# METEOPATH		=	../output/
-METEOPATH		=	/Users/bert/snowpack/Projects/COSMO_past/COSMO-2_1996/smet  ;directly to project dir
+METEOPATH		=	../output/
+# METEOPATH		=	/Users/bert/snowpack/Projects/COSMO_past/COSMO-2_1996/smet  ;directly to project dir
 
 # [GENERATORS]
 # RH::CREATE = HUMIDITY
