Make sure VW and DW are calculated when wind components are available in the input data.

--- a/Scripts/Spinup/base.ini
+++ b/Scripts/Spinup/base.ini
@@ -229,3 +229,7 @@ TSG::arg1::value		=	272.15	;there is a large gap in the data -> fill with this v
 
 RH::generator1			=	HUMIDITY
 RH::arg1::type			=	RH
+
+
+VW::generator1			=	WINDCOMPONENTS
+DW::generator1			=	WINDCOMPONENTS
